data/issues_nolabel/nolabel_test_1282.txt
Get an error when building the Op library

When I Build the Op library, I got the error 🔢
In file included from /usr/local/lib/python2.7/dist-packages/tensorflow/include/tensorflow/core/framework/op.h:22:0,
from zero_out.cc:1:
/usr/local/lib/python2.7/dist-packages/tensorflow/include/tensorflow/core/framework/op_def.pb.h:12:2: error: #error This file was generated by a newer version of protoc which is
#error This file was generated by a newer version of protoc which is
^
/usr/local/lib/python2.7/dist-packages/tensorflow/include/tensorflow/core/framework/op_def.pb.h:13:2: error: #error incompatible with your Protocol Buffer headers. Please update
#error incompatible with your Protocol Buffer headers.  Please update
^
/usr/local/lib/python2.7/dist-packages/tensorflow/include/tensorflow/core/framework/op_def.pb.h:14:2: error: #error your headers.
#error your headers.
^
/usr/local/lib/python2.7/dist-packages/tensorflow/include/tensorflow/core/framework/op_def.pb.h:22:35: fatal error: google/protobuf/arena.h: No such file or directory
#include <google/protobuf/arena.h>
I install tensorflow by pip installation,branch r0.7.